--- a/app/src/main/res/layout/fragment_life_cycler1.xml
+++ b/app/src/main/res/layout/fragment_life_cycler1.xml
@@ -2,8 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#fff"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#fff">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
@@ -12,6 +12,13 @@
         android:layout_height="match_parent"
         android:text="fragment1" />
 
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/center_top_bg_new" />
 
 
 </FrameLayout>
